# pico-blink-scratch

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
